Fix container overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -25,6 +25,7 @@ footer {
   margin-left: 40px;
   padding: 20px;
   min-width: 400px;
+  overflow-y: auto;
 }
 
 .full-container {
